lab2.4/grammar.txt
<Specification> ::= <ClassSection> <TokensSection> <TypesSection> <MethodsSection> <GrammarSection> <AxiomSection> <EndSection>

<ClassSection> ::= "%class" <ClassName> "\n"
<ClassName> ::= IDENTIFIER

<TokensSection> ::= "%tokens" <TokenList> "\n"
<TokenList> ::= IDENTIFIER (<TokenList>)?

<TypesSection> ::= "%types" <TypeDefs> "\n"
<TypeDefs> ::= <TypeDef> (";" <TypeDef>)* ":"
<TypeDef> ::= IDENTIFIER ("," IDENTIFIER)*

<MethodsSection> ::= "%methods" <MethodDecls> "\n"
<MethodDecls> ::= <MethodDecl> ("\n" <MethodDecl>)*
<MethodDecl> ::= <ReturnType> IDENTIFIER "(" <Params> ")" ";"
<Params> ::= <Param> ("," <Param>)* | ε
<Param> ::= IDENTIFIER



<GrammarRules> ::= <GrammarRule> ("\n" <GrammarRule>)*

<GrammarRule> ::= IDENTIFIER "=" <Alternatives> ";"

<Alternatives> ::= <Alternative> ("|" <Alternative>)*

<Alternative> ::= <ElementList> ["/" IDENTIFIER]

<ElementList> ::= <Element>*

<Element> ::= <Repetition> | <Symbol> | <Group>

<Repetition> ::= "%rep" <Group>

<Symbol> ::= IDENTIFIER 

<Group> ::= "(" <Alternatives> ")"


<AxiomSection>  ::= "%axiom" IDENTIFIER "\n"
<EndSection>     ::= "%end" "\n"
